# Codexex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  NOTICE  PRIVACY.md  Package.resolved  Package.swift  README.md  RESEARCH.md  RUNBOOK.md  SECURITY.md  improvement.md  license.md  project.yml
.build/: build.db  plugin-tools.yaml
.claude/: settings.json
.claude/commands/: release.md
.github/workflows/: sentry-release.yml
AppStore/: Codexex.entitlements  ExportOptions-AppStoreConnect.plist
CodexMeter.xcodeproj/: project.pbxproj
Codexex/: CodexexApp.swift  ContentView.swift  Item.swift
Codexex.xcodeproj/: project.pbxproj
Helper/CodexexHelper/: Cargo.toml
Helper/CodexexHelper/src/: auth.rs  flow_registry.rs  lib.rs  main.rs  protocol.rs  quota.rs  release_environment_gating.rs  secure_file_permissions.rs  state.rs
Helper/CodexexHelper/tests/: protocol.rs
Scripts/: build-codexex-helper.sh  check-codexex-companions.sh  codexex-hook-event.sh  codexex-status.sh  embed-codexex-helper.sh  install-codexex-companions.sh  release-smoke.sh
Sources/CodexMeterApp/: CodexAppSettings.swift  CodexLaunchAtLoginManager.swift  CodexMenuBarModel.swift  CodexSecretStore.swift  CodexStatusItemController.swift  CodexUsageHistoryAnalytics.swift  CodexUsageHistoryStore.swift  CodexXPCClient.swift  GlassCard.swift  GlassTokens.swift  PopupRootView.swift  SettingsRootView.swift  SettingsWindowController.swift  StatusBarLabel.swift  main.swift
Sources/CodexMeterCore/: CodexAllowedHosts.swift  CodexAppServerProbe.swift  CodexBinaryLocator.swift  CodexChatGPTAuthParsing.swift  CodexFormatting.swift  CodexHelperLineReader.swift  CodexLocalConfigDoctor.swift  CodexLocalUsageAggregator.swift  CodexLocalUsageDirectoryReader.swift  CodexLocalUsageIndex.swift  CodexLocalUsageModels.swift  CodexLocalUsageTranscriptParser.swift  CodexModels.swift  CodexQuotaPresentationRules.swift  CodexQuotaSnapshotBuilder.swift  CodexRateLimitPayloadMapper.swift  CodexSensitiveRedactor.swift  CodexServiceContracts.swift  CodexXPCClientIdentityRequirement.swift  TestSupport.swift
Sources/CodexMeteriOS/: CodexexiOSApp.swift  CodexiOSAppResetter.swift  CodexiOSModel.swift  CodexiOSOnboardingView.swift  CodexiOSPendingAuthRegistry.swift  CodexiOSPreviewData.swift  CodexiOSRootView.swift  CodexiOSService.swift  CodexiOSSettingsView.swift  CodexiOSShellView.swift  LaunchScreen.storyboard
Sources/CodexexXPCService/: CodexHelperProcess.swift  CodexHelperSession.swift  CodexXPCRequestGuards.swift  CodexXPCService.swift  Info.plist  main.swift
Tests/CodexMeterAppTests/: CodexAppLinksTests.swift  CodexAppSettingsTests.swift  (+11 more)
docs/: APP_REVIEW.md  FEATURES.md
(+480 files in other folders)
